Redoing Csound for Android (#80).